k8s/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: cloudflow-service
spec:
  type: LoadBalancer
  selector:
    app: cloudflow 
  ports: 
    - protocol: TCP 
      port: 80 
      targetPort: 5000
