k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: cloudflow-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts: 
        - cloudflow.me
      secretName: cloudflow-tls
  rules:
    - host: cloudflow.me 
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudflow-service
                port: 
                  number: 80
